--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-  <title>新德汇前端框架主题样式生成器</title>
+  <title>组件主题定制工具</title>
   <style type="text/css">
     html, body {
       height: 100%;
